# skale-skills

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CONVENTION.md  README.md  RECOMMENDED-SKILLS.md  SKILL-INDEX.md  agent_description.md  index-skills.py  issues.md  package.json  pi-architecture.md  plan.md  release-notes.md  skill-repos.md  skill-sites.md
.agent/skills/gdocs/: SKILL.md
docs/: agent-skills-best-practices.md  agents-md-best-practices.md  architecture.d2  credgoo.md  development.md  install-runbook.md  installation.md  pi-extensions-best-practices.md  skill-diagrams.md
docs/anthropic/: 2 Quickstart.md
docs/browser-use/: README.md  browser-session-reuse.md  browser-tools-comparison.md  chrome-dev.md  surf.md  vcl-agent-browser.md
docs/copilot/: 1.md
docs/diagrams/: fetch-url.d2  surf-flow.d2  web-search.d2
docs/openai/: 2_spec.md  integrate.md
extensions/: heartbeat.md  heartbeat.ts  imagegen.md  imagegen.ts  statusline.md  statusline.ts  xmodel-vision-test.mjs  xmodel.md  xmodel.ts
guides/: browser-tools-comparison.md  chrome-dev.md  impeccable-setup.md  openchrome-usage.md  rodney-setup.md  rodney.md  vcl-agent-browser.md
notable/: pi-web-access.md
skiller/: .env.example  README.md  pyproject.toml  skill-sites.md  skiller_config.json  skiller_index.json
skiller/skiller/: __init__.py  cli.py  config.py  core.py  ui.py
skiller/skiller/commands/: __init__.py  base.py  crawl.py  discovery.py  install.py  list_cmd.py  remove.py  search.py
skills/agent-skill-creator/: SKILL.md
skills/agent-skill-creator/references/: workflows.md
skills/agent-skill-creator/scripts/: init_skill.py  quick_validate.py
skills/agents-md-best-practices/: SKILL.md
skills/agents-md-init/: SKILL.md
skills/agents-writer/: SKILL.md
skills/bird/: SKILL.md
skills/command-creator/: SKILL.md
skills/command-creator/assets/: command-templates.md
skills/command-creator/references/: command-reference.md
skills/d2/: SKILL.md  WORKLOG.md
skills/d2/references/: delivery.md  diagram-types.md  recipes.md  syntax.md
skills/fetch-url/: .env.example  .gitattributes  README.md  SKILL.md  fetch-url  fetch.py  install.bat  install.sh  lynx_config  pyproject.toml  requirements.txt  settings.json  w3m_config
skills/fetch-url/references/: github.md  sites.md  troubleshooting.md
skills/fetch-url/scripts/: fetch.py
skills/improve-skill/: SKILL.md
skills/improve-skill/scripts/: extract-session.js
skills/markdown-converter/: SKILL.md
skills/markdown-converter/scripts/: convert.py  convert.sh
skills/oebb-scotty/: SKILL.md
skills/peep/: SKILL.md
skills/peep/references/: auth.md  bookmarks.md  json.md  media.md  news.md  pagination.md  profiling.md  setup.md
skills/play-browser/: SKILL.md
skills/play-browser/scripts/: dismiss-cookies.js  eval.js  install.sh  logs-tail.js  nav.js  net-summary.js  package-lock.json  package.json  pick.js  screenshot.js  start.js  watch.js
skills/readme-write/: SKILL.md
skills/rodney/: .gitignore  SKILL.md
skills/rodney/references/: commands.md  (+3 more)
skills/searxng-search/: SKILL.md  install.bat  install.sh  search.sh
skills/surf/: .gitignore  SKILL.md  install.bat  install.sh  surf  surf-todo.md
skills/todo/: SKILL.md
skills/video-transcript-downloader/: .gitignore  2026-04-29_andrej-karpathy-from-vibe-coding-to-agentic-engineering.md  SKILL.md  install.bat  install.sh  package.json  pnpm-lock.yaml  vtd
skills/web-search/: .env.example  .gitignore  README.md  SKILL.md  install.bat  install.sh  pyproject.toml  requirements.txt  search  search.bat  search.py
skills/web-search/references/: INDEX.md
skills/web-search/scripts/: search.py
skills/xlsx/: SKILL.md
skills/youtube/: .gitignore  SKILL.md  install.bat  install.sh  pyproject.toml  search.py  youtube
testbed/: bench_browser.sh  bench_cloakbrowser.py
tests/: browserfortui_eval.md  eval_browsers.md  eval_sites.md
tests/d2/: test.sh
tests/fetch-url/: test.sh
tests/gdocs/: test.sh
tests/imagegen/: test.sh
tests/rodney/: test.sh
tests/surf/: furious.sh  test.sh
tests/video-transcript-downloader/: test.sh
tests/web-search/: test.sh
tests/youtube/: test.sh
(+39 files in other folders)
