[project]
name = "fetch-url-skill"
version = "1.0.0"
description = "Fetch URL content using text-based browsers (w3m or lynx)"
readme = "SKILL.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pi Agent", email = "pi@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
fetch-url = "fetch:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
