[project]
name = "fetch-url-skill"
version = "1.0.0"
description = "Fetch URL content using text-based browsers (w3m or lynx)"
readme = "SKILL.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pi Agent", email = "pi@example.com"},
]
dependencies = [
    "requests>=2.31.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
fetch-url = "fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["fetch.py"]

[tool.hatch.build.targets.sdist]
only-include = ["fetch.py", "SKILL.md", "README.md", "pyproject.toml", "requirements.txt", "w3m_config", "lynx_config"]
