[project]
name = "fetch-url-skill"
version = "1.0.0"
description = "Fetch URL content using text-based browsers or APIs"
readme = "SKILL.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pi Agent", email = "pi@example.com"},
]
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
fetch-url = "scripts.fetch:main"
