[project]
name = "web-search-skill"
version = "1.0.0"
description = "DuckDuckGo web search skill for pi"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
web-search = "search:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
