[project]
name = "web-search-skill"
version = "1.0.0"
description = "Web search skill with automatic backend selection"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "credgoo>=0.1.0",
]

[project.scripts]
web-search = "scripts.search:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
